# my-python-template

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  cookiecutter.json  docker-compose.yaml  example.env  pyproject.toml  setup.sh
.github/workflows/: actions-format.yaml  actions-formatting.yaml  actions-lint.yaml  actions-poetry.yaml  actions-pr-demo.yaml  actions-test.yaml
app/: __main__.py  config.py  config_advanced.py  config_simple.py  main.py  webserver.py
hooks/: post_gen_project.py
kubernetes/: configmap.yaml  deployment.yaml  service.yaml
tests/: config_test.py
{{ cookiecutter.project_slug }}/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
{{ cookiecutter.project_slug }}/.github/workflows/: actions-format.yaml  actions-pr-demo.yaml  actions-test.yaml
{{ cookiecutter.project_slug }}/env/: example.env
{{ cookiecutter.project_slug }}/extra/: example_script.py
{{ cookiecutter.project_slug }}/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
{{ cookiecutter.project_slug }}/tests/: config_test.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: config.py  main.py  webserver.py
