[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = ""
authors = ["duarte-pompeu <duarte-pompeu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10.5"

loguru = "0.6.0"
pydantic = "1.9.1"

[tool.poetry.dev-dependencies]
bandit = "1.7.4"
black = "22.3.0"
coverage = "6.4.1"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.961"
pylint = "2.14.1"
pytest = "7.1.2"
python-dotenv = "0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
