{# FIXME: dont duplicate this -#}
{% set python_version_tuples = cookiecutter.python_version.split(".") -%}
{% if python_version_tuples|length != 3 %}{% include "error" ~ " Invalid python version. Valid example: '3.11.1'." %}{% endif -%}
{% set python_version_major, python_version_minor, python_version_patch = python_version_tuples -%}

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["duarte-pompeu <duarte-pompeu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "{{python_version_major}}.{{python_version_minor}}.*"

# https://github.com/Delgan/loguru/releases
loguru = "0.7.*"
# https://github.com/pydantic/pydantic/releases
pydantic-settings = "2.*"

# TODO(cookiecutter): use ruff instead of black isort flake8
# TODO(cookiecutter): update dev
[tool.poetry.dev-dependencies]
bandit = "1.*"
black = "24.1.1"
coverage = "7.*"
flake8 = "7.*"
isort = "5.*"
mypy = "1.*"
pytest = "8.*"
python-dotenv = "1.*"

# TODO(cookiecutter): fix poetry version
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
